testsuite/tests/linear/should_fail/LinearPolyType.stderr

LinearPolyType.hs:15:1: error:
    GHC bug #19517: GHC currently does not support programs using GADTs or type families to witness equality of multiplicities

LinearPolyType.hs:15:1: error:
    GHC bug #19517: GHC currently does not support programs using GADTs or type families to witness equality of multiplicities
